@@ -6,6 +6,7 @@ UNRELEASED
     * test: add dependency-check step in tests
     * refactor: use lodash-compat instead of less known/used/shared modules
     * chore: use uglifyjs instead of closure compiler
+    * feat: allow passing hosts as hosts.read, hosts.write
 
 2015-06-03 3.5.0
     * fix: send a descriptive timeout error when it occurs
